--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -654,6 +654,9 @@ li.node-readmore,
 .field--name-field-event-participate,
 .field--name-field-event-sponsor,
 .field--name-field-event-website,
+.field--name-field-exhibit-artist,
+.field--name-field-exhibit-dates,
+.field--name-field-exhibit-location,
 .field--name-field-news-post-date,
 .feeds_feed__content,
 .region-content form,
@@ -753,6 +756,14 @@ li.node-readmore,
   margin-bottom: 1em;
 }
 
+.field--name-field-exhibit-artist .field--label,
+.field--name-field-exhibit-dates .field--label,
+.field--name-field-exhibit-location .field--label {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
 .field--name-field-blotter-date,
 .field--name-field-blotter-activity,
 .field--name-field-blotter-location,
@@ -763,7 +774,10 @@ li.node-readmore,
 .field--name-field-event-parking,
 .field--name-field-event-participate,
 .field--name-field-event-sponsor,
-.field--name-field-event-website {
+.field--name-field-event-website,
+.field--name-field-exhibit-artist,
+.field--name-field-exhibit-dates,
+.field--name-field-exhibit-location {
   color: $dark-gray;
   margin-bottom: 1em;
 }
