Reset size and weight on inserted file paths

--- a/css/style.css
+++ b/css/style.css
@@ -6764,6 +6764,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   color: #981e32;
   border: 1px solid #fff; }
 
+body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div > section > div.region.region-content > article > div.content > div > p > span.file {
+  font-size: 1em;
+  font-weight: normal; }
+
 .btn-success {
   padding: 10px 20px 10px 20px;
   border-radius: 4px; }
