Improve default views row output

--- a/css/style.css
+++ b/css/style.css
@@ -6627,12 +6627,12 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-content table + h2, .region-content table + h3,
 .region-content ul + h2, .region-content ul + h3, .region-content ul + h4,
 .region-content ol + h2, .region-content ol + h3, .region-content ol + h4 {
-  margin-top: 40px; }
+  margin-top: 2em; }
 
 .region-content h2 + table, .region-content h3 + table, .region-content table + p,
 .region-content h2 + ul, .region-content h3 + ul, .region-content h4 + ul,
 .region-content h2 + ol, .region-content h3 + ol, .region-content h4 + ol {
-  margin-top: 20px; }
+  margin-top: 1em; }
 
 .region-content p {
   line-height: 1.6em; }
@@ -6830,11 +6830,14 @@ li.node-readmore,
 
 /* Reset specific class margins to allow full screen layouts */
 /* BLOCK REGION - CONTENT - fields and views */
+.contextual-region {
+  width: 100%; }
+
 .views-element-container {
   margin-left: 25px; }
 
 .view-content {
-  margin-right: 50px; }
+  margin-right: 1em; }
 
 .view-content .messages--warning {
   padding: 1em 1em 1em 2.5em;
@@ -6864,19 +6867,19 @@ li.node-readmore,
 .view-content .table-responsive th {
   padding-left: 15px; }
 
-.view-header h2 {
-  margin-left: 0; }
-
-.view-upcoming-events .view-footer p,
-.view-press-releases .view-footer p {
-  margin-left: 20px; }
-
+.view-header h2,
 .views-row h2,
+.views-row h3,
+.views-row h4,
 .views-element-container .content .field,
 .views-element-container .content p,
 .views-element-container .content ul,
 .views-element-container .content ol {
   margin-left: 0; }
+
+.view-upcoming-events .view-footer p,
+.view-press-releases .view-footer p {
+  margin-left: 20px; }
 
 .field--item {
   color: #595959; }
