--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -462,12 +462,12 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   table + h2, table + h3,
   ul + h2, ul + h3, ul + h4,
   ol + h2, ol + h3, ol + h4 {
-    margin-top: 40px;
+    margin-top: 2em;
   }
   h2 + table, h3 + table, table + p,
   h2 + ul, h3 + ul, h4 + ul,
   h2 + ol, h3 + ol, h4 + ol {
-    margin-top: 20px;
+    margin-top: 1em;
   }
 }
 
@@ -697,12 +697,16 @@ li.node-readmore,
 
 /* BLOCK REGION - CONTENT - fields and views */
 
+.contextual-region {
+  width: 100%;
+}
+
 .views-element-container {
   margin-left: 25px;
 }
 
 .view-content {
-  margin-right: 50px;
+  margin-right: 1em;
 }
 
 .view-content .messages--warning {
@@ -737,7 +741,14 @@ li.node-readmore,
   padding-left: 15px;
 }
 
-.view-header h2 {
+.view-header h2,
+.views-row h2,
+.views-row h3,
+.views-row h4,
+.views-element-container .content .field,
+.views-element-container .content p,
+.views-element-container .content ul,
+.views-element-container .content ol {
   margin-left: 0;
 }
 
@@ -746,14 +757,6 @@ li.node-readmore,
   .view-footer p {
   margin-left: 20px;
   }
-}
-
-.views-row h2,
-.views-element-container .content .field,
-.views-element-container .content p,
-.views-element-container .content ul,
-.views-element-container .content ol {
-  margin-left: 0;
 }
 
 .field--item {
