--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -491,13 +491,13 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-content img.float-right {
   float: right;
   width: 50%;
-  margin: 0 0 1em 1.5em;
+  margin: 0 1.5em 1em 1.5em;
 }
 
 .region-content img.float-right-small {
   float: right;
   width: 30%;
-  margin: 0 0 1em 1.5em;
+  margin: 0 1.5em 1em 1.5em;
 }
 
 .region-content img.float-left {
@@ -510,6 +510,15 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   float: left;
   width: 30%;
   margin: 0 1.5em 1em 0;
+}
+
+figcaption {
+  float: right;
+  clear: right;
+  display: block;
+  width: 50%;
+  font-size: .75em;
+  margin: 0 1.5em 1em 1.5em;
 }
 
 .region-content h1.page-header {
