Fix inheritance issue on .paragraph__column strong.top-border

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -959,7 +959,7 @@ ol.breadcrumb {
   }
   p strong.top-border {
     margin-left: 0;
-    margin-bottom: -34px;
+    margin-bottom: -4em;
   }
   p.social {
     text-align: center;
