--- a/css/style.css
+++ b/css/style.css
@@ -7048,7 +7048,7 @@ ol.breadcrumb {
 
 .paragraph__column p strong.top-border {
   margin-left: 0;
-  margin-bottom: -34px; }
+  margin-bottom: -4em; }
 
 .paragraph__column p.social {
   text-align: center;
