Match Google CSE pager style with results

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -1255,6 +1255,11 @@ div.region.region-content > ol {
   padding-bottom: 7px;
 }
 
+div.gsc-cursor-box.gs-bidi-start-align {
+  margin: 2em 1em 0 2px;
+  font-size: 1.25em;
+}
+
 /* SHARE BUTTONS BLOCK */
 
 #atstbx .at-share-btn-elements {
