Update search form and input field paths

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -103,11 +103,10 @@
                   <li><a href="http://registrar.wsu.edu/academic-calendar">Academic calendar</a></li>
                   <li><a href="http://learn.wsu.edu/">Blackboard</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
+                  <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Campus map</a></li>
                   <li><a href="http://wsuv.orgsync.com/">CougSync</a></li>
                   <li><a href="http://office365.wsu.edu/">Email and Office 365</a></li>
-                  <li><a href="https://www.vancouver.wsu.edu/campus-map-and-directions">Map</a></li>
                   <li><a href="https://my.wsu.edu/">myWSU</a>
-                  <li><a href="http://wsuv.orgsync.com/">Parking</a></li>
                 </ul>
             </li>
             <li class="dropdown">
@@ -144,9 +143,9 @@
             </li>
         </ul>
         <div class="col-sm-3 col-md-3 pull-right">
-            <form action="/search/node" method="get" class="navbar-form" role="search">
+            <form action="/search" method="get" class="navbar-form" role="search">
                 <div class="input-group" tabindex="2">
-                    <input data-drupal-selector="edit-keys" class="form-search form-control" placeholder="Search" type="search" id="edit-keys" name="keys" value="">
+                    <input data-drupal-selector="edit-key-word" class="form-text form-control" placeholder="Search" type="text" id="edit-key-word" name="key-word">
                     <div class="input-group-btn" aria-hidden="true">
                         <button class="btn btn-default" type="submit" value="Search"><span class="glyphicon glyphicon-search"></span></button>
                     </div>
