--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -717,7 +717,6 @@ li.node-readmore,
 
 .views-element-container {
   margin-left: 25px;
-  padding-right: 70px;
 }
 
 .view-content {
@@ -760,11 +759,16 @@ li.node-readmore,
 .views-row h2,
 .views-row h3,
 .views-row h4,
+.views-row p,
 .views-element-container .content .field,
 .views-element-container .content p,
 .views-element-container .content ul,
 .views-element-container .content ol {
   margin-left: 0;
+}
+
+.views-row p + h2 {
+  margin-top: 0;
 }
 
 .view-upcoming-events,
