--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -462,7 +462,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   table + h2, table + h3,
   ul + h2, ul + h3, ul + h4,
   ol + h2, ol + h3, ol + h4 {
-    margin-top: 2em;
+    margin-top: 1.5em;
   }
   h2 + table, h3 + table, table + p,
   h2 + ul, h3 + ul, h4 + ul,
@@ -536,8 +536,11 @@ figcaption {
 }
 
 .region-content ul li,
-.region-content ol li {
+.region-content ol li,
+.region-content ul li ul li,
+.region-content ol li ol li {
   padding-bottom: 5px;
+  margin-right: 25px;
   color: $text-color;
 }
 
@@ -866,7 +869,7 @@ li.node-readmore,
   border-radius: 4px;
   border-color: $brand-primary;
   padding: 10px 20px 10px 20px;
-  margin-top: 20px;
+  margin: 20px 70px 20px 0;
   text-decoration: none;
   font-weight: bold;
 }
@@ -881,6 +884,10 @@ li.node-readmore,
   .view-content .messages--warning,
   .view-content .messages--error {
     margin: -2em 0 5.5em 0;
+  }
+  .pager li > a,
+  .pager li > span {
+    margin-right: 25px;
   }
 }
 
