--- a/css/style.css
+++ b/css/style.css
@@ -6650,7 +6650,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 
 .region-content img.full {
   width: 100%;
-  margin: 0 1.5 1em 1.5em; }
+  margin: 0; }
 
 .region-content img.float-right {
   float: right;
@@ -6671,6 +6671,9 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   float: left;
   width: 30%;
   margin: 0 1.5em 1em 0; }
+
+.region-content iframe {
+  width: 60%; }
 
 figcaption {
   float: right;
@@ -6708,7 +6711,7 @@ figcaption {
 
 .region-content button.btn-primary,
 .region-content a.btn-primary {
-  margin: 10px 10px 10px 0;
+  margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 20px;
   box-shadow: none;
   font-weight: bold;
@@ -6732,7 +6735,7 @@ figcaption {
 
 .region-content button.btn-default,
 .region-content a.btn-default {
-  margin: 10px 10px 10px 0;
+  margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 20px;
   box-shadow: none;
   font-weight: bold;
@@ -6756,7 +6759,7 @@ figcaption {
 
 .region-content button.btn-solid,
 .region-content a.btn-solid {
-  margin: 10px 10px 10px 0;
+  margin: 7px 10px 10px 0;
   padding: 10px 20px 10px 20px;
   box-shadow: none;
   font-weight: bold;
@@ -6806,13 +6809,20 @@ body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div >
 .region-content table {
   max-width: 95%; }
 
+.addthis_sharing_toolbox {
+  margin-top: -1em; }
+
 @media (max-width: 767.98px) {
   .region-content table {
     max-width: 88%;
     overflow-x: auto; } }
 
+@media (max-width: 991.98px) {
+  .region-content iframe {
+    width: 100%; } }
+
 h1.page-header,
-h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote,
+h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote, figure,
 ul.local-actions,
 ul.tabs--primary,
 li.node-readmore,
@@ -7081,6 +7091,9 @@ ol.breadcrumb {
 
 .paragraph__column table {
   max-width: 90%; }
+
+.paragraph__column iframe {
+  width: 100%; }
 
 .paragraph--color--rgba-grey-slight {
   background-color: #f8f8f8; }
