--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -493,6 +493,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
 .region-content img.full {
   width: 100%;
   margin: 0;
+  padding-bottom: 1em;
 }
 
 .region-content img.float-right {
