--- a/css/style.css
+++ b/css/style.css
@@ -6551,6 +6551,17 @@ body > nav > div.navbar-header > button {
 .region-sidebar-second .block-views .view-content {
   margin-right: 10px; }
 
+.region-sidebar-second .contextual-region {
+  background-color: #fafafa;
+  padding-bottom: 1em;
+  margin-bottom: 1.5em;
+  border-radius: 4px; }
+
+.region-sidebar-second .views-element-container {
+  padding: 0 1.25em 0 1.25em;
+  margin-left: 0;
+  margin-right: 1em; }
+
 .well {
   padding-left: 0;
   margin-top: 10px;
