Responsive YouTube video embeds

--- a/css/style.css
+++ b/css/style.css
@@ -6363,7 +6363,7 @@ caption {
   .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
     text-decoration: underline; } }
 
-/* Credit: https://work.smarchal.com/twbscolor/ */
+/* credit: https://work.smarchal.com/twbscolor/ */
 #navbar {
   background-color: #fff;
   border: none; }
@@ -6686,9 +6686,6 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   width: 30%;
   margin: 0 1.5em 1em 0; }
 
-.region-content iframe {
-  width: 60%; }
-
 figcaption {
   float: right;
   clear: right;
@@ -6796,10 +6793,6 @@ figcaption {
   color: #981e32;
   border: 1px solid #fff; }
 
-body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div > section > div.region.region-content > article > div.content > div > p > span.file {
-  font-size: 1em;
-  font-weight: normal; }
-
 .btn-success {
   padding: 10px 20px 10px 20px;
   border-radius: 4px; }
@@ -6823,17 +6816,34 @@ body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div >
 .region-content table {
   max-width: 95%; }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  margin: 1.5em 25px 1.5em 25px;
+  height: 0;
+  overflow: hidden; }
+
+/* credit: https://avexdesigns.com/responsive-youtube-embed/ */
+.video-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
 .addthis_sharing_toolbox {
   margin-top: -1em; }
+
+body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div > section > div.region.region-content > article > div.content > div > p > span.file {
+  font-size: 1em;
+  font-weight: normal; }
 
 @media (max-width: 767.98px) {
   .region-content table {
     max-width: 88%;
     overflow-x: auto; } }
-
-@media (max-width: 991.98px) {
-  .region-content iframe {
-    width: 100%; } }
 
 h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote, figure,
@@ -7106,8 +7116,8 @@ ol.breadcrumb {
 .paragraph__column table {
   max-width: 90%; }
 
-.paragraph__column iframe {
-  width: 100%; }
+.paragraph__column .video-container {
+  margin: 1.5em 0 1.5em 0; }
 
 .paragraph--color--rgba-grey-slight {
   background-color: #f8f8f8; }
