--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -345,6 +345,13 @@ body > nav > div.navbar-header > button {
     color: $brand-primary;
     border-color: $brand-primary;
   }
+  nav li span {
+    font-weight: bold;
+    display: block;
+    margin-right: 20px;
+    padding: .75em 0 .75em 1px;
+    border-bottom: 1px solid $light-gray;
+  }
 } /* MENUS */
 
 .region-sidebar-second .block-views {
@@ -457,6 +464,10 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   text-decoration: underline;
 }
 
+.responsive-menus.responsified .responsive-menus-simple li span {
+  padding-left: 15px;
+}
+
 /* BLOCK REGION - HIGHLIGHTED - system messages */
 
 .region-highlighted .alert {
@@ -527,7 +538,7 @@ body > div.main-container.container-fluid.js-quickedit-main-content > div > asid
   margin: 0 1.5em 1em 0;
 }
 
-.region-content img.float-right-left {
+.region-content img.float-left-small {
   float: left;
   width: 30%;
   margin: 0 1.5em 1em 0;
