Add bottom margin for node .author

--- a/css/style.css
+++ b/css/style.css
@@ -6890,6 +6890,9 @@ li.node-readmore,
 
 /* Reset specific class margins to allow full screen layouts */
 /* BLOCK REGION - CONTENT - fields and views */
+.author {
+  margin-bottom: 2em; }
+
 .contextual-region {
   width: 100%; }
 
