--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -764,6 +764,10 @@ li.node-readmore,
 
 /* BLOCK REGION - CONTENT - fields and views */
 
+.author {
+  margin-bottom: 2em;
+}
+
 .contextual-region {
   width: 100%;
 }
