--- a/css/style.css
+++ b/css/style.css
@@ -7239,7 +7239,8 @@ form .panel-body {
   border: none; }
 
 .form-control {
-  box-shadow: none; }
+  box-shadow: none;
+  color: #757575; }
 
 .form-item h2, .form-item h3 {
   margin-top: 1.75em; }
