--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -780,6 +780,7 @@ figcaption {
   border: 1px solid $light-gray;
   margin-top: 20px;
   margin-bottom: 30px;
+  width: 92%;
 }
 
 .table-hover tbody tr:hover td,
