--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -372,6 +372,10 @@ body > nav > div.navbar-header > button {
   }
 } /* MENUS */
 
+.region-sidebar-second a {
+  word-wrap: break-word;
+}
+
 .region-sidebar-second .block-views {
   h2.block-title {
     margin-left: 0;
