Miscellaneous styles for views
Initial rough styling for exposed filter button

--- a/css/style.css
+++ b/css/style.css
@@ -6976,6 +6976,14 @@ li.node-readmore,
 .field--name-field-blotter-activity,
 .field--name-field-blotter-location,
 .field--name-field-blotter-resolution,
+.field--name-field-cba-address,
+.field--name-field-cba-company,
+.field--name-field-cba-discount,
+.field--name-field-cba-email,
+.field--name-field-cba-industry,
+.field--name-field-cba-owner-operator,
+.field--name-field-cba-website,
+.field--name-field-cba-year-graduated,
 .field--name-field-department,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
@@ -6988,6 +6996,10 @@ li.node-readmore,
 .field--name-field-exhibit-artist,
 .field--name-field-exhibit-dates,
 .field--name-field-exhibit-location,
+.field--name-field-itn-article-url,
+.field--name-field-itn-publication-date,
+.field--name-field-itn-publication-source,
+.field--name-field-itn-reporter,
 .field--name-field-news-post-date,
 .feeds_feed__content,
 .region-content form,
@@ -7030,6 +7042,28 @@ li.node-readmore,
     color: #a51b00; }
 
 /* Homepage alert - severe */
+.btn-info {
+  margin: 7px 10px 10px 0;
+  padding: 10px 20px 10px 20px;
+  box-shadow: none;
+  font-weight: bold;
+  border-radius: 4px;
+  border: 0;
+  text-decoration: none;
+  color: #981e32;
+  background-color: #fff;
+  border: 1px solid #981e32;
+  transition: all .2s ease-out;
+  -moz-transition: all .2s ease-out;
+  -webkit-transition: all .2s ease-out; }
+
+/* Exposed filter */
+.btn:hover,
+.btn:focus {
+  background-color: #981e32;
+  color: #fff;
+  border: 1px solid #981e32; }
+
 .view-content .table-responsive {
   margin-top: -1em;
   margin-left: -25px;
@@ -7090,6 +7124,14 @@ li.node-readmore,
 .field--name-field-blotter-activity,
 .field--name-field-blotter-location,
 .field--name-field-blotter-resolution,
+.field--name-field-cba-address,
+.field--name-field-cba-company,
+.field--name-field-cba-discount,
+.field--name-field-cba-email,
+.field--name-field-cba-industry,
+.field--name-field-cba-owner-operator,
+.field--name-field-cba-website,
+.field--name-field-cba-year-graduated,
 .field--name-field-event-contact,
 .field--name-field-event-cost,
 .field--name-field-event-department,
@@ -7100,7 +7142,11 @@ li.node-readmore,
 .field--name-field-event-website,
 .field--name-field-exhibit-artist,
 .field--name-field-exhibit-dates,
-.field--name-field-exhibit-location {
+.field--name-field-exhibit-location,
+.field--name-field-itn-article-url,
+.field--name-field-itn-publication-date,
+.field--name-field-itn-publication-source,
+.field--name-field-itn-reporter {
   color: #333333;
   margin-bottom: 1em; }
 
@@ -7130,7 +7176,7 @@ li.node-readmore,
   border-radius: 4px;
   border-color: #981e32;
   padding: 10px 20px 10px 20px;
-  margin: 20px 70px 20px 0;
+  margin: 20px 60px 20px 0;
   text-decoration: none;
   font-weight: bold; }
 
@@ -7145,7 +7191,7 @@ li.node-readmore,
     margin: -2em 0 5.5em 0; }
   .pager li > a,
   .pager li > span {
-    margin-right: 25px; } }
+    margin-right: 70px; } }
 
 /* ADMIN UI AND MISC. OVERRIDES */
 legend {
